// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRecordType creates type definition for a record 1`] = `
"export type BooksRecord = {
	title?: string
}"
`;

exports[`createRecordType handles file fields with multiple files 1`] = `
"export type BooksRecord = {
	avatars?: string[]
}"
`;

exports[`createResponseType creates type definition for a response 1`] = `"export type BooksResponse<Texpand extends string = ""> = Required<BooksRecord> & BaseSystemFields<Texpand extends "" ? undefined : never>"`;

exports[`createResponseType handles file fields with multiple files 1`] = `
"export type BooksRecord = {
	avatars?: string[]
}"
`;

exports[`generate generates correct output given db input 1`] = `
"/**
* This file was @generated using pocketbase-typegen
*/

import type PocketBase from 'pocketbase'
import type { RecordService, RecordOptions, RecordListOptions, ListResult } from 'pocketbase'

export enum Collections {
	Books = "books",
}

// Alias types for improved usability
export type IsoDateString = string
export type RecordIdString = string
export type HTMLString = string

// System fields
export type BaseSystemFields<T = unknown> = {
	id: RecordIdString
	collectionId: string
	collectionName: Collections
	created: IsoDateString
	updated: IsoDateString
} & (T extends never ? never : { expand: T })

export type AuthSystemFields<T = unknown> = {
	email: string
	emailVisibility: boolean
	username: string
	verified: boolean
} & BaseSystemFields<T>

// Record types for each collection

export type BooksRecord = {
	title?: string
}

// Response types include system fields and match responses from the PocketBase API
export type BooksResponse<Texpand extends string = ""> = Required<BooksRecord> & BaseSystemFields<Texpand extends "" ? undefined : never>

// Types containing all Records and Responses, useful for creating typing helper functions

export type CollectionRecords = {
	books: BooksRecord
}

export type CollectionResponses<Texpand extends string> = {
	books: BooksResponse
}

// Enhanced RecordService type with dynamic expand typing
interface EnhancedRecordService<Tcollection extends Collections> {
	getOne<Texpand extends string = ''>(
		id: string,
		options?: Omit<RecordOptions, 'expand'> & { expand?: Texpand },
	): Promise<CollectionResponses<Texpand>[Tcollection]>

	getList<Texpand extends string = ''>(
		page?: number,
		perPage?: number,
		options?: Omit<RecordListOptions, 'expand'> & { expand?: Texpand },
	): Promise<ListResult<CollectionResponses<Texpand>[Tcollection]>>

	getFullList<Texpand extends string = ''>(
		options?: Omit<RecordListOptions, 'expand'> & { expand?: Texpand },
	): Promise<Array<CollectionResponses<Texpand>[Tcollection]>>

	getFirstListItem<Texpand extends string = ''>(
		filter: string,
		options?: Omit<RecordOptions, 'expand'> & { expand?: Texpand },
	): Promise<CollectionResponses<Texpand>[Tcollection]>

	create<TBody = Record<string, unknown>, Texpand extends string = ''>(
		body: TBody,
		options?: Omit<RecordOptions, 'expand'> & { expand?: Texpand },
	): Promise<CollectionResponses<Texpand>[Tcollection]>

	update<TBody = Record<string, unknown>, Texpand extends string = ''>(
		id: string,
		body: TBody,
		options?: Omit<RecordOptions, 'expand'> & { expand?: Texpand },
	): Promise<CollectionResponses<Texpand>[Tcollection]>
}

// Type for usage with type asserted PocketBase instance
// https://github.com/pocketbase/js-sdk#specify-typescript-definitions
export type TypedPocketBase = {
	collection(idOrName: "books"): EnhancedRecordService<Collections.Books> & RecordService
} & PocketBase

"
`;
